# learn_python

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.vsproject/: settings.json
src/learn_python/: 24_comprehension.py  25_comprehen_adv.py  26_lambda_key.py  35_chaining_puref.py  36_lesson.py  _paste_answer.py  basics_variables.py  closure.py  closure_defcopy.py  comprehen_lambda.py  comprehen_mapfilter.py  comprehension_1.py  comprehension_advanced.py  comprehension_initial.py  comprehension_lambda.py  data_manipulation.py  define_var.py  functional_asvalue.py  higher_function_pipeline.py  main.py  p1_define_var.py  p1_dict.py  p1_function.py  p1_list.py  p1_set.py  p1_tuple.py  p1_variables.py  p2_nested_struc.py  p2_rewrite.py  p2_scope.py  p_list.py  phase1_loops  phase1_loops.py  temp_snippets.py  test_rebind.py  var_list.py
src/learn_python/basics/: p1_condition.py  p2_scope.py
src/learn_python/examples/: ex01 Names and Binding.py  ex02 Mutation vs Transformation.py  ex03 Scope vs Lifetime.py  ex04 Identity vs Equality.py  ex05 Ownership and Boundaries.py  ex06 Defensive Closures.py  ex07 Pure Data Pipelines.py  ex08 Safe List Processing.py  ex09 Late Binding Bug.py  ex10 Mutable Default Trap.py
src/learn_python/initial/: p1_dict.py  p2_rewrite.py
src/learn_python/practice/: 22-Dec-2025.py  guided_practice_1.py  guided_practice_2.py  guided_practice_3.py  guided_practice_4.py  (+5 more)
tests/: test_functions.py  test_guided_practice.py  test_p1_loops.py  test_p1_variables.py  test_phase1_loops  test_phase1_loops.py  test_phase1_variables.py
